<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Image Classification</string>
    <string name="capture_button_alt">Capture</string>
    <string name="unknown">UNKNOWN</string>
    <string name="imagen_estudiada">Imagen estudiada</string>
    <string name="open_camera">Abrir cámara</string>
    <string name="gallery">galería</string>
    <string name="repository">Repositorio</string>
    <string name="equinos_app">Equinos App</string>
    <string name="imagen_de_un_caballo">Imagen de un caballo</string>
    <string name="title_home">Home</string>
    <string name="title_galeria">Galería</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile_title">Perfil</string>
    <string name="settings_title">Configuración</string>
    <string name="abrir_camara">Abrir cámara</string>
    <string name="cambiar_tema">Cambiar \ntema </string>
</resources>
