<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageClassificationActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/view_finder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:scaleType="fitCenter" />

    <FrameLayout
        android:id="@+id/fl_preview_view_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_predicted"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:contentDescription="@string/imagen_estudiada"
            android:scaleType="fitCenter"
            tools:src="@drawable/disgustado" />

        <TextView
            android:id="@+id/text_prediction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="40dp"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:background="@color/colorAccent"
            android:text="@string/unknown"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white" />

        <View
            android:id="@+id/box_prediction"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/shape_rectangle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonsCl"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageButton
            android:id="@+id/galleryBtn"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/outline_add_photo_alternate_38"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/capture_button_alt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/reloadBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/reloadBtn"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:background="@drawable/outline_cached_48"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/capture_button_alt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/shareBtn"
            app:layout_constraintStart_toEndOf="@id/galleryBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/shareBtn"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/baseline_share_24"
            android:contentDescription="@string/capture_button_alt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/saveBtn"
            app:layout_constraintStart_toEndOf="@id/reloadBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/saveBtn"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/baseline_save_24"
            android:contentDescription="@string/capture_button_alt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/shareBtn"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>